--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
         </div>
         <div class="collapse nav-collapse">
             <ul class="navbar-nav">
-                <li class="nav-item">Home</li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Home</a>
+                </li>
             </ul>
         </div>
     </nav>
