--- a/index.html
+++ b/index.html
@@ -283,6 +283,38 @@
             </div>
         </section>
 
+            <section class="p-5 bg-primary">
+                <div class="container">
+                    <h2 class="text-center text-light">
+                        Our Instructors
+                    </h2>
+                    <p class="lead text-center text-light">
+                        Our all Instructors have 5 years+ of Experience in Web Development insdustry
+                    </p>
+                </div>
+                <div class="row g-4">
+                    <div class="col-md-6 col-lg-3">
+                        <div class="card bg-light">
+                            <div class="card-body text-center">
+                                <img src="https://scontent.fisb4-1.fna.fbcdn.net/v/t39.30808-1/272719571_1642261259461050_6529577061112970639_n.jpg?stp=dst-jpg_p160x160&_nc_cat=110&ccb=1-7&_nc_sid=7206a8&_nc_eui2=AeGXTsPMvf14GDt1ZFUDypEaR4FdosirV-tHgV2iyKtX63F8Z87LSoH3zlAAyPbQegJpJOu_PeM2zTuO_ZM08Nz1&_nc_ohc=MXAG6tgK008AX_ynEWB&_nc_ht=scontent.fisb4-1.fna&oh=00_AT9rpHn_mkzDDaH14cIYgOxh8GakHFYSk6HAlB6tl3HY_Q&oe=62CE34B2" class="rounded-circle mb-3" alt="">
+                                <h2 class="card-title text-center mb-3">
+                                    Imran Khan
+                                </h2>
+                               <p class="card-text">
+                                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempore ratione ipsam dolorum recusandae! Vitae, eius!
+                               </p>
+                               <div class="social-icons ">
+                               <a href="" class="i bi-twitter"></a>
+
+                               <a href="" class="i bi-facebook text-primary"></a>
+
+                               <a href="" class="i bi-youtube text-danger"></a>
+                            </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
 
         <script
             src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
