--- a/index.html
+++ b/index.html
@@ -300,15 +300,15 @@
                                 <h2 class="card-title text-center mb-3">
                                     Imran Khan
                                 </h2>
-                               <p class="card-text">
+                               <p class="card-text mb-1">
                                 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempore ratione ipsam dolorum recusandae! Vitae, eius!
                                </p>
-                               <div class="social-icons ">
-                               <a href="" class="i bi-twitter"></a>
+                               <div class="social-icons mb-2">
+                               <a href="" class="i bi-twitter text-dark justify-conten-between"></a>
 
-                               <a href="" class="i bi-facebook text-primary"></a>
+                               <a href="" class="i bi-facebook text-dark justify-conten-between"></a>
 
-                               <a href="" class="i bi-youtube text-danger"></a>
+                               <a href="" class="i bi-youtube text-dark justify-conten-between"></a>
                             </div>
                             </div>
                         </div>
